Started working on JoinSession endpoint.
